# cursworkkk

./: CMakeLists.txt  authmanager.cpp  authmanager.h  databasemanager.cpp  databasemanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  ticketmanager.cpp  ticketmanager.h  user.cpp  user.h
